--- a/diagnostica.html
+++ b/diagnostica.html
@@ -185,7 +185,6 @@
                                     </div>
                                 </div>
                             </li>
-
                             <li class="item-a">
                                 <div class="card-client">
                                     <img class="card-img" src="images/edf-ivo.jpg" alt="Card image cap">
@@ -277,6 +276,14 @@
                                     </div>
                                 </div>
                             </li>
+                            <li class="item-a">
+                                <div class="card-client">
+                                    <img class="card-img" src="images/mansao-eduardo-fonseca.jpg" alt="Card image cap">
+                                    <div class="card-body">
+                                    <p class="card-text">Mansão Eduardo Fonseca</p>
+                                    </div>
+                                </div>
+                            </li>
                         </ul>
                     </div>
         </section>
@@ -332,6 +339,81 @@
                 <div class="equipament-item">
                     <img class="img-fluid" src="images/drone.jpg">
                     <span>Drone para inspeção de fachadas</span>
+        </section>
+
+        <section class="clientes">
+            <h2>O que dizem os nossos clientes?</h2>
+            <div class="container-cliente">
+                <ul id="autoWidth2" class="cs-hidden">
+                    <li class="item-a">
+                        <div class="clientes-item">
+                            <div class="clientes-cabecalho">
+                                <img src="images/user.jpg" alt="cliente">
+                                <div class="clientes-infos">
+                                    <span>Telmo</span>
+                                    <p>Síndico - Edf. Palm Springs</p>
+                                    <div class="stars">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="cliente-avaliacao">
+                               "Deixo aqui meu elogio a equipe da Seecon Engenharia pessoas muito atenciosas, 
+                                desde a recepção até a execução das solicitações."</p>
+                        </div>
+                    </li>
+                    <li class="item-a">
+                        <div class="clientes-item">
+                            <div class="clientes-cabecalho">
+                                <img src="images/user2.jpg" alt="cliente">
+                                <div class="clientes-infos">
+                                    <span>Silvia</span>
+                                    <p>Síndico - Edf. Palm Springs</p>
+                                    <div class="stars">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="cliente-avaliacao">
+                                “Estou super satisfeita com a Seecon e confio muito no trabalho realizado. 
+                                É uma empresa séria, comprometida e que respeita muito bem os seus prazos! e o melhor, é 
+                                onde sempre sou muito bem atendida por todos”
+                            </p>
+                        </div>
+                    </li>
+                    <li class="item-a">
+                        <div class="clientes-item">
+                            <div class="clientes-cabecalho">
+                                <img src="images/user.jpg" alt="cliente">
+                                <div class="clientes-infos">
+                                    <span>Sebastião</span>
+                                    <p>Síndico - Edf. Palm Springs</p>
+                                    <div class="stars">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="cliente-avaliacao">
+                                "Parabéns a equipe técnica da Seecon pelo excelente trabalho realizado na Vistoria 
+                                dos nossos sistemas prediais! trazendo mais tranquilidade e certeza de  que o 
+                                patrimônio de cada um está mais seguro."
+                            </p>
+                        </div>
+                    </li>
+
+            </div>
         </section>
 
         <div class="novidade">
