--- a/estrutural.html
+++ b/estrutural.html
@@ -85,7 +85,7 @@
         </section>
 
         <article class="reforco">
-            <h2>Engenharia de Reforço e Recuperação de Estruturas</h2>
+            <h2>Reforço e Recuperação de Estruturas</h2>
             <div class="reforco-content">
                 <div class="img-diagnostica">
                     <img src="images/img-estrutural.jpg" alt="img viga restaurada">
@@ -102,7 +102,7 @@
                         tecnológico na engenharia de recuperação de estruturas</p> 
                 </div>
             </div>
-            <h2>Tecnologia Aplicada a Reforços e Recuperação</h2>
+            <h2>Tecnologia Aplicada a Reforços e Recuperação de Estruturas</h2>
             <p>A SEECON Engenharia tem ampliado cada vez mais suas atividades no ramo, 
                 implementando modernas técnicas e soluções inteligentes em projetos de 
                 reforço e recuperação de estruturas. </p>
@@ -219,29 +219,35 @@
                     realizamos uma concepção estrutural viável e coerente que atende a 
                     necessidade de cada cliente. Durante o desenvolvimento do projeto a 
                     equipe de engenheiros da Seecon Engenharia elabora as melhores soluções estruturais e 
-                    escolhe as técnicas construtivas mais seguras para suas soluções estruturais, 
+                    escolhe as técnicas construtivas mais seguras para suas concepções estruturais, 
                     sempre prezando pelo custo benefício da tecnologia adotada. </p>
             </div>
             <div class="container-projetos">
                 <ul id="autoWidth3" class="cs-hidden">
                     <li class="item-a">
                         <div class="projeto-item">
-                            <img src="./images/projeto1.jpg" alt="portfolio projetos1">
+                            <img src="./images/projeto.jpg" alt="portfolio projetos1">
                         </div>
                     </li> 
                     <li class="item-a">
                         <div class="projeto-item">
-                            <img src="./images/projeto.jpg" alt="portfolio projetos2">
+                            <img src="./images/projeto4.jpg" alt="portfolio projetos2">
                         </div>
                     </li> 
                     <li class="item-a">
                         <div class="projeto-item">
-                            <img src="./images/projeto2.jpg" alt="portfolio projetos3">
+                            <img src="./images/projeto1.jpg" alt="portfolio projetos3">
+                        </div>
+                    </li> 
+                    
+                    <li class="item-a">
+                        <div class="projeto-item">
+                            <img src="./images/projeto2.jpg" alt="portfolio projetos4">
                         </div>
                     </li> 
                     <li class="item-a">
                         <div class="projeto-item">
-                            <img src="./images/projeto3.jpg" alt="portfolio projetos4">
+                            <img src="./images/projeto3.jpg" alt="portfolio projetos5">
                         </div>
                     </li> 
                 </ul>     
@@ -280,8 +286,8 @@
                                 </div>
                             </div>
                             <p class="cliente-avaliacao">
-                                Deixo aqui meu elogio a equipe da Seecon Engenharia pessoas muito atenciosas, 
-                                desde a recepção até a execução das solicitações.</p>
+                               "Deixo aqui meu elogio a equipe da Seecon Engenharia pessoas muito atenciosas, 
+                                desde a recepção até a execução das solicitações."</p>
                         </div>
                     </li>
                     <li class="item-a">
@@ -324,9 +330,9 @@
                                 </div>
                             </div>
                             <p class="cliente-avaliacao">
-                                Parabéns a equipe técnica da Seecon pelo excelente trabalho realizado na Vistoria 
+                                "Parabéns a equipe técnica da Seecon pelo excelente trabalho realizado na Vistoria 
                                 dos nossos sistemas prediais! trazendo mais tranquilidade e certeza de  que o 
-                                patrimônio de cada um está mais seguro.
+                                patrimônio de cada um está mais seguro."
                             </p>
                         </div>
                     </li>
