--- a/estrutural.html
+++ b/estrutural.html
@@ -75,7 +75,7 @@
                     <br>
                         <h6>O investimento em recuperação de estruturas eleva a durabilidade do patrimônio e garante maior segurança aos moradores de um condomínio ou residência. </h6>
                     <div class="button-wpp">
-                        <a href="#"> 
+                        <a href="https://url.gratis/dVQdHa" target="_blank"> 
                             <img src="./images/whatsapp.png" alt="img-whatsapp"></img>
                             Fale conosco
                         </a>
@@ -272,10 +272,10 @@
                     <li class="item-a">
                         <div class="clientes-item">
                             <div class="clientes-cabecalho">
-                                <img src="images/user.jpg" alt="cliente">
+                                <img src="images/user3.jpg" alt="cliente">
                                 <div class="clientes-infos">
                                     <span>Telmo</span>
-                                    <p>Síndico - Edf. Palm Springs</p>
+                                    <p>Cliente - Projetos</p>
                                     <div class="stars">
                                         <img src="images/star.jpg" alt="estrelas">
                                         <img src="images/star.jpg" alt="estrelas">
@@ -286,8 +286,8 @@
                                 </div>
                             </div>
                             <p class="cliente-avaliacao">
-                               "Deixo aqui meu elogio a equipe da Seecon Engenharia pessoas muito atenciosas, 
-                                desde a recepção até a execução das solicitações."</p>
+                               "Deixo aqui meu elogio a equipe da Seecon Engenharia. Pessoas muito atenciosas, 
+                                desde a recepção até a execução das solicitações de projeto."</p>
                         </div>
                     </li>
                     <li class="item-a">
@@ -296,7 +296,7 @@
                                 <img src="images/user2.jpg" alt="cliente">
                                 <div class="clientes-infos">
                                     <span>Silvia</span>
-                                    <p>Síndico - Edf. Palm Springs</p>
+                                    <p>Cliente - Projetos</p>
                                     <div class="stars">
                                         <img src="images/star.jpg" alt="estrelas">
                                         <img src="images/star.jpg" alt="estrelas">
@@ -319,7 +319,7 @@
                                 <img src="images/user.jpg" alt="cliente">
                                 <div class="clientes-infos">
                                     <span>Sebastião</span>
-                                    <p>Síndico - Edf. Palm Springs</p>
+                                    <p>Cliente - Laudos</p>
                                     <div class="stars">
                                         <img src="images/star.jpg" alt="estrelas">
                                         <img src="images/star.jpg" alt="estrelas">
@@ -336,7 +336,27 @@
                             </p>
                         </div>
                     </li>
-
+                    <li class="item-a">
+                        <div class="clientes-item">
+                            <div class="clientes-cabecalho">
+                                <img src="images/user4.jpg" alt="cliente">
+                                <div class="clientes-infos">
+                                    <span>Cândido Dortas</span>
+                                    <p>Síndico - Condomínio Mansão Eduardo Fonseca</p>
+                                    <div class="stars">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                        <img src="images/star.jpg" alt="estrelas">
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="cliente-avaliacao">
+                                "Trabalho bem elaborado, com excelente técnica. Presteza no atendimento e envio de toda documentação no prazo estipulado com explicações claras e precisas. O acompanhamento é feito durante todo o processo. Parabéns pelo esmero na prestação de serviços."
+                            </p>
+                        </div>
+                    </li>
             </div>
         </section>
 
@@ -364,13 +384,13 @@
                 <p>contato@seeconengenharia.com</p>
             </div>    
             <div class="footer-icons">
-                <a>
+                <a href="https://url.gratis/dVQdHa" target="_blank">
                     <img src="./images/whatsapp.png" alt="logo whatsapp">
                 </a>
                 <a>
                     <img src="./images/Facebook.png" alt="logo facebook">
                 </a>
-                <a>
+                <a href="https://www.instagram.com/seecon_engenharia/" >
                     <img src="./images/instagram.png" alt="logo instagram">
                 </a>
                 <a>
