--- a/seniorliving.html
+++ b/seniorliving.html
@@ -78,7 +78,7 @@
                         <h6>Senior Living é um mix entre o mercado imobiliário, de hospitalidade e o de cuidados. É a habitação para pessoas na melhor idade que trás um novo conceito em conforto.<br>
                             <br>Tudo isso, em local especializado que atenda suas necessidades ao mesmo tempo que alia serviços e experiência.</h6>
                         <div class="button-wpp">
-                            <a href="#"> 
+                            <a href="https://url.gratis/dVQdHa" target="_blank"> 
                                 <img src="./images/whatsapp.png" alt="logo whatsapp"></img>
                                 Fale conosco
                             </a>
@@ -203,7 +203,7 @@
                                 <div class="container-form-info">    
                                     <span>Mande uma mensagem mensagem no nosso WhatsApp</span>
                                     <div class="button-wpp">
-                                        <a href="#"> 
+                                        <a href="https://url.gratis/dVQdHa" target="_blank"> 
                                             <img src="./images/whatsapp.png" alt="logo whatsapp"></img>
                                             Fale conosco
                                         </a>
@@ -228,13 +228,13 @@
                     <p>contato@seeconengenharia.com</p>
                 </div>    
                 <div class="footer-icons">
-                    <a>
+                    <a href="https://url.gratis/dVQdHa" target="_blank">
                         <img src="./images/whatsapp.png" alt="logo whatsapp">
                     </a>
                     <a>
                         <img src="./images/Facebook.png" alt="logo facebook">
                     </a>
-                    <a>
+                    <a href="https://www.instagram.com/seecon_engenharia/" target="_blank">
                         <img src="./images/instagram.png" alt="logo instagram">
                     </a>
                     <a>
