--- a/contato.html
+++ b/contato.html
@@ -150,7 +150,7 @@
                         <h4>Mande uma mensagem mensagem no nosso <span>WhatsApp</span> ou entre em contato através do formulário</h4>
                        <div class="container">    
                             <div class="button-wpp">
-                                <a href="#"> 
+                                <a href="https://url.gratis/dVQdHa" target="_blank"> 
                                     <img src="./images/whatsapp.png" alt="logo whatsapp"></img>
                                     Fale conosco
                                 </a>
@@ -161,7 +161,7 @@
                             <a>
                                 <img src="./images/Facebook.png" alt="logo facebook">
                             </a>
-                            <a>
+                            <a href="https://www.instagram.com/seecon_engenharia/" >
                                 <img src="./images/instagram.png" alt="logo instagram">
                             </a>
                             <a>
@@ -191,7 +191,7 @@
                 <p>contato@seeconengenharia.com</p>
             </div>    
             <div class="footer-icons">
-                <a>
+                <a href="https://url.gratis/dVQdHa" target="_blank">
                     <img src="./images/whatsapp.png" alt="logo whatsapp">
                 </a>
                 <a>
