--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
                 <p>contato@seeconengenharia.com</p>
             </div>    
             <div class="footer-icons">
-                <a>
+                <a href="https://url.gratis/dVQdHa" target="_blank">
                     <img src="./images/whatsapp.png" alt="logo whatsapp">
                 </a>
                 <a>
                     <img src="./images/Facebook.png" alt="logo facebook">
                 </a>
-                <a>
+                <a href="https://www.instagram.com/seecon_engenharia/" >
                     <img src="./images/instagram.png" alt="logo instagram">
                 </a>
                 <a>
