--- a/estrutural.html
+++ b/estrutural.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" type="text/css" href="./styles/lightslider.css"/>
     <!----Jquery-->
-    <script type="text/javascript" src="js/JQuery3.3.1.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/lightslider.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
