--- a/seniorliving.html
+++ b/seniorliving.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" type="text/css" href="./styles/lightslider.css"/>
     <!----Jquery-->
-    <script type="text/javascript" src="js/JQuery3.3.1.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/lightslider.js"></script>
     
     <link rel="preconnect" href="https://fonts.gstatic.com">
