--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -71,9 +71,8 @@
                 <div class="infos-hero col-sm-7 col-12">
                     <div class="texts-hero">
                         <h2>Vai construir ou reformar?</h2>
-                        <br>
-                        <h2>Precisa de laudos de vistorias ou <br>
-                            inspeções prediais? </h2>
+                        <h2>Precisa de vistorias e laudos?</h2>
+                        <h2>Sua edificação precisa de um reparo estrutural?</h2>
                         <br>
                     </div>
                     <a href="contato.html" class="button">Entre em contato</a>
@@ -123,7 +122,7 @@
                 <p>contato@seeconengenharia.com</p>
             </div>    
             <div class="footer-icons">
-                <a href="https://url.gratis/dVQdHa" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=+55799172-1777" target="_blank">
                     <img src="./images/whatsapp.png" alt="logo whatsapp">
                 </a>
                 <a>
