--- a/seniorliving.html
+++ b/seniorliving.html
@@ -12,15 +12,13 @@
     <link rel="stylesheet" href="./styles/components/header.css">
     <link rel="stylesheet" href="./styles/components/footer.css">
     <link rel="stylesheet" href="./styles/main.css">
-
     <link rel="stylesheet" type="text/css" href="./styles/lightslider.css"/>
-    <!----Jquery-->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="js/lightslider.js"></script>
-    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
+    <!----Jquery-->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript" src="js/lightslider.js"></script>
 </head>
     <body>
 
@@ -78,7 +76,7 @@
                         <h6>Senior Living é um mix entre o mercado imobiliário, de hospitalidade e o de cuidados. É a habitação para pessoas na melhor idade que trás um novo conceito em conforto.<br>
                             <br>Tudo isso, em local especializado que atenda suas necessidades ao mesmo tempo que alia serviços e experiência.</h6>
                         <div class="button-wpp">
-                            <a href="https://url.gratis/dVQdHa" target="_blank"> 
+                            <a href="https://api.whatsapp.com/send?phone=+55799172-1777" target="_blank"> 
                                 <img src="./images/whatsapp.png" alt="logo whatsapp"></img>
                                 Fale conosco
                             </a>
@@ -203,7 +201,7 @@
                                 <div class="container-form-info">    
                                     <span>Mande uma mensagem mensagem no nosso WhatsApp</span>
                                     <div class="button-wpp">
-                                        <a href="https://url.gratis/dVQdHa" target="_blank"> 
+                                        <a href="https://api.whatsapp.com/send?phone=+55799172-1777" target="_blank"> 
                                             <img src="./images/whatsapp.png" alt="logo whatsapp"></img>
                                             Fale conosco
                                         </a>
@@ -228,7 +226,7 @@
                     <p>contato@seeconengenharia.com</p>
                 </div>    
                 <div class="footer-icons">
-                    <a href="https://url.gratis/dVQdHa" target="_blank">
+                    <a href="https://api.whatsapp.com/send?phone=+55799172-1777" target="_blank">
                         <img src="./images/whatsapp.png" alt="logo whatsapp">
                     </a>
                     <a>
@@ -252,9 +250,8 @@
                 </a>
             </div>
         </footer>
-
+        <script src="js/script.js" type="text/javascript"></script> 
+        <script src="js/buttonMobile.js" type="text/javascript"></script>
+        <script src="js/formValidation.js" type="text/javascript"></script> 
     </body>
-    <script src="js/script.js" type="text/javascript"></script> 
-    <script src="js/buttonMobile.js" type="text/javascript"></script>
-    <script src="js/formValidation.js" type="text/javascript"></script> 
 </html>
